--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ aiosignal==1.3.1
 asttokens==2.4.1
 async-timeout==4.0.3
 attrs==24.2.0
+black==24.10.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+click==8.1.7
 comm==0.2.2
 debugpy==1.8.7
 decorator==5.1.1
@@ -29,6 +31,7 @@ MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 mpmath==1.3.0
 multidict==6.1.0
+mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.2.1
 numpy==2.0.2
@@ -47,6 +50,7 @@ nvidia-nvtx-cu12==12.1.105
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
+pathspec==0.12.1
 pexpect==4.9.0
 pillow==11.0.0
 platformdirs==4.3.6
@@ -77,6 +81,7 @@ stack-data==0.6.3
 sympy==1.13.3
 threadpoolctl==3.5.0
 tokenizers==0.20.3
+tomli==2.0.2
 torch==2.4.0
 torch-geometric==2.6.1
 torch_cluster==1.6.3+pt24cpu
