--- a/requirements.txt
+++ b/requirements.txt
@@ -80,6 +80,7 @@ six==1.16.0
 stack-data==0.6.3
 sympy==1.13.3
 threadpoolctl==3.5.0
+tokenize_rt==6.1.0
 tokenizers==0.20.3
 tomli==2.0.2
 torch==2.4.0
