--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
 aiosignal==1.3.1
+alembic==1.14.0
 asttokens==2.4.1
 async-timeout==4.0.3
 attrs==24.2.0
@@ -8,18 +9,24 @@ black==24.10.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
+colorlog==6.9.0
 comm==0.2.2
+contourpy==1.3.0
+cycler==0.12.1
 debugpy==1.8.7
 decorator==5.1.1
 duckdb==1.1.3
 exceptiongroup==1.2.2
 executing==2.1.0
 filelock==3.16.1
+fonttools==4.55.2
 frozenlist==1.5.0
 fsspec==2024.10.0
+greenlet==3.1.1
 huggingface-hub==0.26.2
 idna==3.10
 importlib_metadata==8.5.0
+importlib_resources==6.4.5
 ipykernel==6.29.5
 ipython==8.18.1
 jedi==0.19.1
@@ -27,7 +34,11 @@ Jinja2==3.1.4
 joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+kiwisolver==1.4.7
+lightgbm==4.5.0
+Mako==1.3.7
 MarkupSafe==3.0.2
+matplotlib==3.9.3
 matplotlib-inline==0.1.7
 mpmath==1.3.0
 multidict==6.1.0
@@ -47,6 +58,7 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.6.77
 nvidia-nvtx-cu12==12.1.105
+optuna==4.1.0
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
@@ -77,6 +89,7 @@ scikit-learn==1.5.2
 scipy==1.13.1
 sentence-transformers==3.2.1
 six==1.16.0
+SQLAlchemy==2.0.36
 stack-data==0.6.3
 sympy==1.13.3
 threadpoolctl==3.5.0
